IE11向けスタイル修正

--- a/htdocs/src/component/_login-view.scss
+++ b/htdocs/src/component/_login-view.scss
@@ -3,8 +3,8 @@
 .component.login-view {
 
   .container {
-    max-height: 16rem;
-    max-width: 20rem;
+    height: 16rem;
+    width: 20rem;
     position: absolute;
     top: 0; bottom: 0; left: 0; right: 0;
     margin: auto;
